--- a/hoops_frontend/package.json
+++ b/hoops_frontend/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.27.2",
     "daisyui": "^2.15.2",
     "formik": "^2.2.9",
+    "formik-wizard-form": "^2.1.0",
     "moment": "^2.29.3",
     "next": "12.1.6",
     "qs": "^6.10.5",
