--- a/hoops_frontend/package.json
+++ b/hoops_frontend/package.json
@@ -23,8 +23,9 @@
     "formik-wizard-form": "^2.1.0",
     "moment": "^2.29.3",
     "next": "12.1.6",
+    "next-auth": "^4.3.4",
     "qs": "^6.10.5",
-    "react": "18.1.0",
+    "react": "^18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0",
     "react-moment": "^1.1.2",
@@ -35,14 +36,10 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@babel/plugin-syntax-top-level-await": "^7.14.5",
     "autoprefixer": "^10.4.7",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.0.24"
-  },
-  "plugins": [
-    "@babel/plugin-syntax-top-level-await"
-  ]
+  }
 }
