--- a/hoops_frontend/package.json
+++ b/hoops_frontend/package.json
@@ -23,6 +23,7 @@
     "formik-wizard-form": "^2.1.0",
     "moment": "^2.29.3",
     "next": "12.1.6",
+    "next-auth": "^4.4.0",
     "qs": "^6.10.5",
     "react": "^18.1.0",
     "react-dom": "18.1.0",
@@ -30,6 +31,7 @@
     "react-moment": "^1.1.2",
     "react-responsive": "^9.0.0-beta.8",
     "react-toggle": "^4.1.2",
+    "stripe": "^9.8.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "yup": "^0.32.11"
   },
