--- a/hoops_frontend/package.json
+++ b/hoops_frontend/package.json
@@ -21,15 +21,18 @@
     "daisyui": "^2.15.2",
     "formik": "^2.2.9",
     "formik-wizard-form": "^2.1.0",
+    "micro": "^9.3.4",
     "moment": "^2.29.3",
     "next": "12.1.6",
     "next-auth": "^4.4.0",
+    "qrcode.react": "^3.0.2",
     "qs": "^6.10.5",
     "react": "^18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0",
     "react-moment": "^1.1.2",
     "react-responsive": "^9.0.0-beta.8",
+    "react-toastify": "^9.0.4",
     "react-toggle": "^4.1.2",
     "stripe": "^9.8.0",
     "tailwind-scrollbar-hide": "^1.1.7",
