--- a/hoops_frontend/package.json
+++ b/hoops_frontend/package.json
@@ -25,6 +25,7 @@
     "moment": "^2.29.3",
     "next": "12.1.6",
     "next-auth": "^4.4.0",
+    "next-iron-session": "^4.2.0",
     "qrcode.react": "^3.0.2",
     "qs": "^6.10.5",
     "react": "^18.1.0",
@@ -35,6 +36,7 @@
     "react-toastify": "^9.0.4",
     "react-toggle": "^4.1.2",
     "stripe": "^9.8.0",
+    "swr": "^1.3.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "yup": "^0.32.11"
   },
