--- a/hoops_api/package.json
+++ b/hoops_api/package.json
@@ -14,6 +14,7 @@
     "@_sh/strapi-plugin-ckeditor": "^1.1.0",
     "@strapi/plugin-i18n": "4.1.12",
     "@strapi/plugin-users-permissions": "4.1.12",
+    "@strapi/provider-upload-aws-s3": "^4.2.0",
     "@strapi/strapi": "4.1.12",
     "pg": "8.6.0"
   },
